# guiplayground

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
data/: Jano.csv
src/: GUIManager.cpp  GUIManager.hpp  MenuSystem.cpp  MenuSystem.hpp  PlotSystem.cpp  PlotSystem.hpp  main.cpp
